--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prepare": "husky install",
     "nest": "nest"
   },
   "dependencies": {
@@ -57,6 +58,8 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.5",
     "jest": "29.3.1",
     "prettier": "2.7.1",
     "source-map-support": "^0.5.20",
@@ -67,7 +70,14 @@
     "tsconfig-paths": "4.1.0",
     "typescript": "4.7.4"
   },
+  "jest-junit": {
+    "outputDirectory": "./test-results",
+    "addFileAttribute": "true"
+  },
   "jest": {
+    "setupFiles": [
+      "dotenv/config"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
